# Redmine-Helper

./: .gitignore  .vimspector.json  CMakeLists.txt  LICENSE  conan_build.bat  conanfile.txt  imgui.ini  profile_debug  profile_release  start_build_debug.bat  start_build_release.bat  start_config_debug.bat  start_config_release.bat
src/: app_helper.cpp  app_helper.h  json_helper.cpp  json_helper.h  main.cpp  main_gui.cpp  resp_helper.cpp  resp_helper.h
src/script/: encoding.ps1
src/ui/: save.cpp  save.h  ui.cpp  ui.h  uiwin.cpp  uiwin.h  win.cpp  win.h  windata.cpp  windata.h
test/: test.cpp
